--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import "~react-image-gallery/styles/css/image-gallery.css";
+
 @tailwind base;
   @tailwind components;
   @tailwind utilities;
@@ -74,3 +76,4 @@
       @apply bg-background text-foreground;
     }
   }
+
